--- a/planning-app/package.json
+++ b/planning-app/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "axios": "^1.8.4",
     "expo": "~52.0.43",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.10.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
